# Fractal_Generator

./: README.md  fractal-frontend.jsx  jj.txt  package-lock.json  package.json  vite.config.js
fractal-backend/: CHANGELOG.md  README.md  fractal-backend.cabal
fractal-backend/.stack-work/: stack.sqlite3
fractal-backend/app/: Main.hs
fractal-backend/src/: Fractal.hs
fractal-backend/src/Fractal/: Algorithms.hs  Generator.hs  Types.hs
fractal-frontend/: package-lock.json  package.json
fractal-frontend/src/: App.jsx  main.jsx
fractal-frontend/src/components/FractalGenerator/: colorPalettes.js
fractal-frontend/src/components/FractalGenerator/hooks/: useFractalCanvas.js
fractal-generator/: CHANGELOG.md  FractalDrawer.cabal  LICENSE  fractal-generator.cabal
fractal-generator/app/: Main.hs
fractal-generator/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
fractal-generator/src/: ColorSchemes.hs  Fractals.hs  Main.hs  Types.hs  to fix
source/: FractalLogic.hs  FractalTypes.hs  Main.hs  generator.cabal
src/: App.jsx  package-lock.json  package.json
src/components/: fractal-frontend.jsx  index.js
src/components/FractalGenerator/: FractalGenerator.jsx
src/components/FractalGenerator/hooks/: useFractalCanvas.js
