name:                fractal-backend
version:             0.1.0.0
description:         Fractal generator backend server
license:             BSD3
author:              Your Name
maintainer:          example@example.com
build-type:          Simple
cabal-version:       >=1.10

executable fractal-backend
    main-is:             Main.hs
    hs-source-dirs:      app,
                         src
    build-depends:       base >= 4.7 && < 5,
                        aeson,
                        scotty,
                        wai-cors,
                        bytestring,
                        text
    default-language:    Haskell2010
    other-modules:       Fractal,
                        Fractal.Types,
                        Fractal.Algorithms,
                        Fractal.Generator