cabal-version:   3.0
name:            fractal-generator
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          amabe418
maintainer:      valienteamalia418@gmail.com
category:        Graphics
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wallclee

executable fractal-generator
  main-is:             Main.hs
  other-modules:       Fractals
                     , Types
                     , ColorSchemes
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , gloss-juicy
                     , JuicyPixels >= 3.3.2
                     , directory
                     , time
                     , vector
                     , parallel
                     , containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
